# rl-dino-agent

./: .gitignore  README.md  pyproject.toml
assets/: demo.webm
configs/: default.yaml  optuna_phase1_best.yaml  optuna_phase1_best_visible.yaml  optuna_phase1_long_gpu.yaml  optuna_phase2_best_long_gpu.yaml  optuna_phase2_best_resume_30k_steps.yaml  optuna_tune_gpu.yaml  running config example.txt
demos/episode_001/: metadata.json  trajectory.npz
demos/episode_002/: metadata.json  trajectory.npz
demos/episode_003/: metadata.json  trajectory.npz
demos/episode_004/: metadata.json  trajectory.npz
demos/episode_005/: metadata.json  trajectory.npz
scripts/: imitation_train.py  play_model.py  record_demos.py  setup.ps1  start_tensorboard.ps1  train.py  tune_optuna.py
src/rl_dino_agent/: __init__.py  config.py
src/rl_dino_agent/envs/: __init__.py  browser_dino_env.py
src/rl_dino_agent/training/: __init__.py  callbacks.py  extractors.py  factory.py
src/rl_dino_agent/utils/: plotting.py  server.py
